add: get user id secured endpoint
